Change wrongly set language

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 # Auto detect text files and perform LF normalization
 # * text=auto
+frontend/assets/css/* linguist-vendored
 frontend/css/* linguist-vendored
 *.css linguist-vendored
 
