--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 # Auto detect text files and perform LF normalization
 # * text=auto
-*.css linguist-vendored=false
+*.css linguist-vendored
+*.min.css linguist-vendored
