--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,3 @@
 # Auto detect text files and perform LF normalization
 # * text=auto
-*.css linguist-vendored
-*.min.css linguist-vendored
+*.css linguist-vendored=true
