Change wrongly set language

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-*.css linguist-vendored=true
-*.min.css linguist-vendored=true
-frontend/css/* linguist-vendored=true
+* linguist-vendored
+*.js linguist-vendored=false
+*.html linguist-vendored=false
+*.java linguist-vendored=false
