--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,8 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 * linguist-vendored
-*.js linguist-vendored=false
+frontend/js/* linguist-vendored=false
 *.html linguist-vendored=false
 *.java linguist-vendored=false
 frontend/css/* linguist-vendored=false
+*.sql linguist-language=SQL
