Change wrongly set language

--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@ frontend/js/* linguist-vendored=false
 *.java linguist-vendored=false
 frontend/css/* linguist-vendored=false
 *.sql linguist-language=SQL
+frontend/vendor/* linguist-vendored=true
