Change wrongly set language

--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,6 @@ frontend/vendor/* linguist-vendored=true
 frontend/js/* linguist-vendored=false
 *.html linguist-vendored=false
 *.java linguist-vendored=false
-frontend/css/* linguist-vendored=false
+# frontend/css/* linguist-vendored=false
 *.sql linguist-language=SQL
 
